<resources>
    <string name="app_name">quotescelebrities</string>
    <string name="action_settings">Settings</string>

    <string name="quotes">Citas célebres</string>
    <string name="title_activity_drawer_navigation">Drawer Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Celebrities</string>
    <string name="nav_header_subtitle">ITVO</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_quote_randomly">Display quotes randomly</string>
    <string name="menu_quote_add">Quotes add</string>
    <string name="menu_quote_list">Quotes list</string>
    <string name="menu_user_login">Login</string>

    <string name="id">Id</string>
    <string name="quote">Quote</string>
    <string name="author">Author</string>
    <string name="save">Save</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>

    <string name="dialog_ok">OK</string>
    <string name="saved">Guardado satisfactoriamente&#8230;</string>
    <!-- Strings related to login -->
    <string name="login_failed">Usuario o password incorrecto</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="token_required">Token is required, please authenticate first</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
