<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_quote_randomly" />
        <item
            android:id="@+id/nav_quote_add"
            android:icon="@drawable/baseline_note_add_24"
            android:title="@string/menu_quote_add" />
        <item
            android:id="@+id/nav_quote_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_quote_list" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/baseline_login_24"
            android:title="@string/menu_user_login" />
    </group>
</menu>